fixed overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -170,7 +170,7 @@ to{
     animation-range: entry 0% cover 40%;
 }
 .help{
-    animation:appear2 linear;
+    animation:appear linear;
     animation-timeline: view();
     animation-range: entry 0% cover 40%;
 }
